--- a/index.html
+++ b/index.html
@@ -1,63 +1,74 @@
+ 
 <html>
-
-<head>
-    <title>Gesture Web App</title>
+  <head>
+    <title>Emotion To Emoji</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
     <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
-    <style type="text/css" data-glamor=""></style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/webcamjs/1.0.26/webcam.js"></script>
 
     <link rel="stylesheet" type="text/css" href="style.css">
-</head>
+  </head>
 
-<body>
-    <div class="container">
-        <center>
-            <h3 class="btn btn-info heading">GESTURE WEB APP
-                <br>
-                <span>&#9996;</span>
-                <span>&#128077;</span>
-                <span>&#128076;</span>
-                <span>&#9994;</span>
-                <span>&#128079;</span>
-                <span>&#129304;</span>
-            </h3>
+  <body>
+  <div class="container">
+  
+    <center>
+      <h3 class="btn btn-warning heading">EMOTICON TO EMOJI APP
+      <br>
+      <span>&#128522;</span>
+      <span>&#128512;</span>
+      <span>&#128532;</span>
+      <span>&#128546;</span>
+      <span>&#128545;</span>
+      <span>&#128548;</span>
+    </h3>
+      <br><br>
 
-            <br><br>
-            <p style="font-size: 22px;">Take a selfie of a gesture to know about it's meaning</p>
-            <p>On the following gestures the model is trained - </p>
-            <p></p>
+      <p style="font-size: 22px;">Take your selfie to generate emoji
+      	<br>
+        <b style="color: yellow">Are you Happy?</b>
+        <br>
+        <b style="color: black">Are you Sad?</b>
+        <br>
+        <b style="color: red">Are you Angry?</b>
+        <br>
+      </p>
+    
+      <div class="col-md-4 col-sm-12 col-xs-12">
+        <label>Webcam View - </label>
+        <div id="camera"></div>
+        <br><br>
+        <button onclick="take_snapshot();" class="btn btn-warning">Capture Image</button>
+      </div>
 
-            <div class="col-md-4 col-sm-12 col-xs-12">
-                <label>Webcam View - </label>
-                <div id="camera"></div>
-                <br><br>
-                <button class="btn btn-primary" onclick="take_snapshot()">Capture Image</button>
-            </div>
+      <div class="col-md-4 col-sm-12 col-xs-12">
+        <label>Prediction 1 - </label>
+        <p class="emotion_name" id="result_emoticon_name"></p>
+        <p class="emoji" id="update_emoji"></p>
 
-            <div class="col-md-4 col-sm-12 col-xs-12">
-                <span>&#9996; | </span>
-                <span>&#128076; | </span>
-                <span>&#128077;</span>
-                <br><br>
+        <label>Prediction 2 - </label>
+        <p class="emotion_name" id="result_emoticon_name2"></p>
+        <p class="emoji" id="update_emoji2"></p>
+      </div>
 
-                <label>Prediction - </label>
-                <p class="gesture_name" id="result_gesture_name"></p>
-                <p class="emoji" id="result_emoji"></p>
-            </div>
+      <div class="col-md-4 col-sm-12 col-xs-12">
+	      <label>Snapshot - </label>
+        <div id="result"></div>
+        <br><br>
+        <button onclick="check();" class="btn btn-success">Predict Emotion</button>
+      </div>
 
-            <div class="col-md-4 col-sm-12 col-xs-12">
-                <label>Snapshot - </label>
-                <div id="result"></div>
-                <br><br>
-                <button class="btn btn-success" onclick="check()">Predict Gesture</button>
-            </div>
-        </center>
-    </div>
-    <script src="main.js"></script>
-</body>
+    </center>
+
+  </div>
+
+<script src="main.js"></script>
+
+  </body>
 </html>
+
+ 
