--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
                 <label>Prediction - </label>
                 <p class="gesture_name" id="result_gesture_name"></p>
-                <p class="emoji" id="result_emoji"></p>
+                <p class="gesture" id="result_gesture"></p>
             </div>
 
             <div class="col-md-4 col-sm-12 col-xs-12">
